--- a/roles/cnt_docker/vars/main.yml
+++ b/roles/cnt_docker/vars/main.yml
@@ -2,6 +2,8 @@
 # Define supported platforms
 cnt_docker_platforms:
   - "CentOS8"
+  - "RedHat8"
+  - "AlmaLinux8"
   - "OracleLinux8"
   - "Ubuntu20"
   - "Ubuntu21"
@@ -14,6 +16,8 @@ cnt_docker_platforms:
 cnt_docker_os_family: "
   {%- if
       ( ansible_distribution == 'CentOS' ) or
+      ( ansible_distribution == 'RedHat' ) or
+      ( ansible_distribution == 'AlmaLinux' ) or
       ( ansible_distribution == 'OracleLinux' )
   -%}
     {{ 'RedHat' }}
