refact: normalize os_family

--- a/roles/cnt_docker/vars/main.yml
+++ b/roles/cnt_docker/vars/main.yml
@@ -34,7 +34,7 @@ cnt_docker_os_family: "
   -%}
     {{ 'Ubuntu' }}
   {%- else -%}
-    {{ 'Linux' }}
+    {{ 'NotSupported' }}
   {%- endif -%}
   "
 
