--- a/roles/cnt_podman/vars/main.yml
+++ b/roles/cnt_podman/vars/main.yml
@@ -26,7 +26,7 @@ cnt_podman_os_family: "
   -%}
     {{ 'Ubuntu' }}
   {%- else -%}
-    {{ 'Linux' }}
+    {{ 'NotSupported' }}
   {%- endif -%}
   "
 
