--- a/roles/cnt_docker/vars/main.yml
+++ b/roles/cnt_docker/vars/main.yml
@@ -16,7 +16,7 @@ cnt_docker_platforms:
   - "Debian11"
 
 # Group Linux Distributions by family
-cnt_docker_os_family: "
+cnt_docker_os_family: |
   {%- if
       ( ansible_distribution == 'CentOS' ) or
       ( ansible_distribution == 'RedHat' ) or
@@ -40,7 +40,6 @@ cnt_docker_os_family: "
   {%- else -%}
     {{ 'NotSupported' }}
   {%- endif -%}
-  "
 
 # Multiplatform packages
 cnt_docker_profiles_common:
