fix: wrong folding

--- a/roles/cnt_podman/vars/main.yml
+++ b/roles/cnt_podman/vars/main.yml
@@ -15,7 +15,7 @@ cnt_podman_platforms:
   - "Debian10"
   - "Debian11"
 
-cnt_podman_os_family: |
+cnt_podman_os_family: >-
   {%- if
       ( ansible_distribution == 'CentOS' ) or
       ( ansible_distribution == 'RedHat' ) or
