--- a/roles/cnt_docker/vars/main.yml
+++ b/roles/cnt_docker/vars/main.yml
@@ -17,7 +17,7 @@ cnt_docker_platforms:
   - "Debian11"
 
 # Group Linux Distributions by family
-cnt_docker_os_family: |
+cnt_docker_os_family: >-
   {%- if
       ( ansible_distribution == 'CentOS' ) or
       ( ansible_distribution == 'RedHat' ) or
