--- a/roles/cnt_kubectl/vars/main.yml
+++ b/roles/cnt_kubectl/vars/main.yml
@@ -18,7 +18,7 @@ cnt_kubectl_platforms:
   - "MacOSX12"
 
 # Group Linux Distributions by family
-cnt_kubectl_os_family: |
+cnt_kubectl_os_family: >-
   {%- if
       ( ansible_distribution == 'CentOS' ) or
       ( ansible_distribution == 'RedHat' ) or
